# DeepInsight-AI

./: .env.example  .gitignore  Procfile  README.md  clear_cache.py  langgraph.json  pyproject.toml  render.yaml  run_app.sh
backend/: .dockerignore  Dockerfile  requirements.txt  test_api_keys.py
backend/app/: cost_tracker.py  embeddings.py  graph.py  main.py  models.py  nodes.py  output_compiler.py  prompts.py  sse.py  state.py  utils.py
backend/app/cache/: __init__.py  redis_cache.py
backend/app/chat/: __init__.py  followup.py
backend/app/search/: __init__.py  arxiv_search.py  jina.py  merger.py  news_search.py  serper_search.py  tavily_search.py  wikipedia_search.py
backend/tests/: conftest.py  test_cache.py  test_cost_tracker.py  test_graph.py  test_llm_ids.py  test_merger.py  test_models.py  test_search_providers.py  test_tavily_enforcement.py  verify_search_accuracy.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
